# JUCE.5.4.7.Linux.Cmake

JuceHelloWorld/: CMakeLists.txt
JuceHelloWorld/JuceLibraryCode/: AppConfig.h  JuceHeader.h
JuceHelloWorld/Source/: Main.cpp
